# ublox-mga-py

./: .travis.yml  LICENSE  Makefile  Pipfile  README.md  setup.cfg
mgaclient/: __init__.py  client.py  consts.py
tests/: test_mgaclient.py
