[metadata]
name = pymgaclient
version = 0.1
url = https://github.com/key/pymgaclient
author = Mitsukuni Sato
author_email = mitsukuni.sato@gmail.com
license = MIT
license_files = LICENSE
description = pymgaclient: u-box MultiGNSS Assistance service client implementing in python
long_description = file: README.md

[options]
zip_safe = False
packages = find:
