[metadata]
name = pymgaclient
version = 0.1
author = Mitsukuni Sato
author_email = mitsukuni.sato@gmail.com
description = u-box MultiGNSS Assistance service client implementing in python
long_description = file:README.md
url = https://github.com/key/pymgaclient
license = MIT

[options]
zip_safe = False
packages = find:
